--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
         <div style="display: flex;">
             <div style="float: left;width: 30%;">
                 <center>
-                    <span class="head-icon">
-                        <i class="fas fa-user-friends"></i>
+                    <span class="head-icon" style="display: flex;">
+                        <i class="fas fa-walking" style="float: left;margin-left: 15px;margin-right: 0;"></i>
+                        <i class="fas fa-walking" style="float: right;"></i>
                     </span>
                 </center>
             </div>
@@ -115,7 +116,7 @@
             <div style="float: right;" class="lightblue">
                 <center>
                     <span class="content">An estimated</span><br/>
-                    <span class="h1"><i class="fa fa-glass" aria-hidden="true"></i>12.5 MILLION</span><br/>
+                    <span class="h1"><i class="fa fa-cocktail" aria-hidden="true"></i>12.5 MILLION</span><br/>
                     <span class="content">children (ages 5 years or younger), spend</span><br/>
                     <span class="h3">33 HOURS / WEEK</span><br/>
                     <span class="content">In <b><u>child care settings </u></b> and consume nearly all of their daily calories.</span>
